--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -3,6 +3,10 @@ version: "3"
 services:
 
   app:
+    build:
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
-    command: bash -c 'npm run dev'
+    volumes:
+      - ./app:/app
+    command: npm run dev
