--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,5 @@ services:
   app:
     build:
       dockerfile: Dockerfile.production
-    image: ksv2005/devops-for-programmers-project-lvl1
+    image: ksv2005/devops-for-programmers-project-lvl1:latest
     command: npm test
