--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,7 +10,7 @@ services:
       - "8080:8080"
     volumes:
       - ./app:/app
-    command: npm run dev
+    command: bash -c 'sleep 3 && npm start'
 
   caddy:
     image: caddy:2.5.2
