--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,21 @@ services:
       context: .
       dockerfile: Dockerfile.production
     image: ksv2005/devops-for-programmers-project-lvl1:latest
-    command: npm test
+    command: bash -c 'sleep 3 && npm test'
+    environment:
+      DATABASE_HOST: ${DATABASE_HOST}
+      DATABASE_NAME: ${DATABASE_NAME}
+      DATABASE_USERNAME: ${DATABASE_USERNAME}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+    depends_on:
+      - db
+
+  db:
+    image: postgres:14.4
+    restart: always
+    environment:
+      POSTGRES_DB: ${DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USERNAME}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+    volumes:
+      - ./data:/var/lib/postgresql/data
