--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Test app
-        run: make ci
+        run: make copy-env ci
   send_to_docker:
     needs: test
     name: Push Docker image to Docker Hub
